fix spacing

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -50,6 +50,10 @@ body {
   font-weight: 400;
   font-style: normal;
   color: #707070;
+  width: 125%;
+  height: 125%;
+  transform-origin: top left;
+  transform: scale(80%);
 }
 
 .f-left {
